[tool.poetry]
name = "intellinet-pdu-ctrl"
version = "0.5.0"
description = "asyncio client library for intellinet pdus"
authors = ["Josh Gruenstein <josh@tutorintelligence.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.11.0"
lxml = "^5.3.0"
aiohttp = "^3.10.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^1.7.0"
pre-commit = "^2.19.0"
lxml-stubs = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
style = "poetry_scripts:style"

[tool.semantic_release]
version_variables = ["intellinet_pdu_ctrl/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "pip install poetry && poetry build"

[tool.isort]
profile = "black"